tests/snapshots/codegen_snapshot_tests__trait_supertraits.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
pub trait Collection<T> {
    fn first(&self) -> T;
}
pub trait OrderedCollection<T>: Collection<T> {
    fn sorted(&self) -> Self
    where
        Self: Sized;
}
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct BoxedValue<T> {
    value: T,
}
impl<T> incan_stdlib::reflection::HasClassName for BoxedValue<T> {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_stdlib::reflection::HasTypeClassName>::__class_name__()
    }
}
impl<T> incan_stdlib::reflection::HasTypeClassName for BoxedValue<T> {
    fn __class_name__() -> &'static str {
        "BoxedValue"
    }
}
impl<T> incan_stdlib::reflection::HasFieldMetadata for BoxedValue<T> {
    fn __fields__(
        &self,
    ) -> incan_stdlib::frozen::FrozenList<incan_stdlib::reflection::FieldInfo> {
        <Self as incan_stdlib::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl<T> incan_stdlib::reflection::HasTypeFieldMetadata for BoxedValue<T> {
    fn __fields__() -> incan_stdlib::frozen::FrozenList<
        incan_stdlib::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_stdlib::reflection::FieldInfo; 1] = [
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("value"),
                alias: None,
                description: None,
                wire_name: incan_stdlib::frozen::FrozenStr::new("value"),
                type_name: incan_stdlib::frozen::FrozenStr::new("T"),
                has_default: false,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_stdlib::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl<T: Clone> BoxedValue<T> {
    pub fn first(&self) -> T {
        return self.value.clone();
    }
    pub fn sorted(&self) -> Self {
        return self.clone();
    }
}
impl<T: Clone> OrderedCollection<T> for BoxedValue<T> {
    fn sorted(&self) -> Self
    where
        Self: Sized,
    {
        return self.clone();
    }
}
impl<T: Clone> Collection<T> for BoxedValue<T> {
    fn first(&self) -> T {
        return self.value.clone();
    }
}
fn take_first<__IncanTrait0: Collection<i64>>(values: __IncanTrait0) -> i64 {
    return values.first();
}
fn take_sorted<__IncanTrait0: OrderedCollection<i64>>(
    values: __IncanTrait0,
) -> impl OrderedCollection<i64> {
    return values.sorted();
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _ = println!("{}", take_first(BoxedValue { value : 1 }));
    let _ = println!("{}", take_sorted(BoxedValue { value : 2 }).first());
    let _ = println!("{}", (BoxedValue { value : 3 }).first());
    let _ = println!("{}", (BoxedValue { value : 4 }).sorted().first());
}
