tests/snapshots/codegen_snapshot_tests__traits.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
pub trait Named {}
pub trait Drawable {
    fn draw(&self) -> String;
}
pub trait Shape {
    fn area(&self) -> f64;
    fn perimeter(&self) -> f64;
}
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct Dog {
    pub name: String,
}
impl incan_stdlib::reflection::HasClassName for Dog {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_stdlib::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_stdlib::reflection::HasTypeClassName for Dog {
    fn __class_name__() -> &'static str {
        "Dog"
    }
}
impl incan_stdlib::reflection::HasFieldMetadata for Dog {
    fn __fields__(
        &self,
    ) -> incan_stdlib::frozen::FrozenList<incan_stdlib::reflection::FieldInfo> {
        <Self as incan_stdlib::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_stdlib::reflection::HasTypeFieldMetadata for Dog {
    fn __fields__() -> incan_stdlib::frozen::FrozenList<
        incan_stdlib::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_stdlib::reflection::FieldInfo; 1] = [
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("name"),
                alias: None,
                description: None,
                wire_name: incan_stdlib::frozen::FrozenStr::new("name"),
                type_name: incan_stdlib::frozen::FrozenStr::new("str"),
                has_default: false,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_stdlib::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl incan_stdlib::reflection::HasFieldValueReflection for Dog {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            "name" => Some(format!("{}", self.name)),
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![("name".to_string(), format!("{}", self.name))]
    }
}
impl Named for Dog {}
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct Rectangle {
    width: f64,
    height: f64,
}
impl incan_stdlib::reflection::HasClassName for Rectangle {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_stdlib::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_stdlib::reflection::HasTypeClassName for Rectangle {
    fn __class_name__() -> &'static str {
        "Rectangle"
    }
}
impl incan_stdlib::reflection::HasFieldMetadata for Rectangle {
    fn __fields__(
        &self,
    ) -> incan_stdlib::frozen::FrozenList<incan_stdlib::reflection::FieldInfo> {
        <Self as incan_stdlib::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_stdlib::reflection::HasTypeFieldMetadata for Rectangle {
    fn __fields__() -> incan_stdlib::frozen::FrozenList<
        incan_stdlib::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_stdlib::reflection::FieldInfo; 0] = [];
        incan_stdlib::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl incan_stdlib::reflection::HasFieldValueReflection for Rectangle {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![]
    }
}
impl Rectangle {
    pub fn area(&self) -> f64 {
        return self.width * self.height;
    }
    pub fn perimeter(&self) -> f64 {
        return 2.0 * (self.width + self.height);
    }
}
impl Shape for Rectangle {
    fn area(&self) -> f64 {
        return self.width * self.height;
    }
    fn perimeter(&self) -> f64 {
        return 2.0 * (self.width + self.height);
    }
}
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct Circle {
    radius: f64,
}
impl incan_stdlib::reflection::HasClassName for Circle {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_stdlib::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_stdlib::reflection::HasTypeClassName for Circle {
    fn __class_name__() -> &'static str {
        "Circle"
    }
}
impl incan_stdlib::reflection::HasFieldMetadata for Circle {
    fn __fields__(
        &self,
    ) -> incan_stdlib::frozen::FrozenList<incan_stdlib::reflection::FieldInfo> {
        <Self as incan_stdlib::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_stdlib::reflection::HasTypeFieldMetadata for Circle {
    fn __fields__() -> incan_stdlib::frozen::FrozenList<
        incan_stdlib::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_stdlib::reflection::FieldInfo; 0] = [];
        incan_stdlib::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl incan_stdlib::reflection::HasFieldValueReflection for Circle {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![]
    }
}
impl Circle {
    pub fn draw(&self) -> String {
        return {
            let __parts: [&str; 2usize] = ["Circle with radius ", ""];
            let __args: Vec<String> = vec![format!("{}", self.radius)];
            incan_stdlib::strings::fstring(&__parts, &__args)
        };
    }
}
impl Drawable for Circle {
    fn draw(&self) -> String {
        return {
            let __parts: [&str; 2usize] = ["Circle with radius ", ""];
            let __args: Vec<String> = vec![format!("{}", self.radius)];
            incan_stdlib::strings::fstring(&__parts, &__args)
        };
    }
}
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct Square {
    side: f64,
}
impl incan_stdlib::reflection::HasClassName for Square {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_stdlib::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_stdlib::reflection::HasTypeClassName for Square {
    fn __class_name__() -> &'static str {
        "Square"
    }
}
impl incan_stdlib::reflection::HasFieldMetadata for Square {
    fn __fields__(
        &self,
    ) -> incan_stdlib::frozen::FrozenList<incan_stdlib::reflection::FieldInfo> {
        <Self as incan_stdlib::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_stdlib::reflection::HasTypeFieldMetadata for Square {
    fn __fields__() -> incan_stdlib::frozen::FrozenList<
        incan_stdlib::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_stdlib::reflection::FieldInfo; 0] = [];
        incan_stdlib::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl incan_stdlib::reflection::HasFieldValueReflection for Square {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![]
    }
}
impl Square {
    pub fn area(&self) -> f64 {
        return self.side * self.side;
    }
    pub fn draw(&self) -> String {
        return {
            let __parts: [&str; 2usize] = ["Square with side ", ""];
            let __args: Vec<String> = vec![format!("{}", self.side)];
            incan_stdlib::strings::fstring(&__parts, &__args)
        };
    }
}
impl Shape for Square {
    fn area(&self) -> f64 {
        return self.side * self.side;
    }
    fn perimeter(&self) -> f64 {
        return 4.0 * self.side;
    }
}
impl Drawable for Square {
    fn draw(&self) -> String {
        return {
            let __parts: [&str; 2usize] = ["Square with side ", ""];
            let __args: Vec<String> = vec![format!("{}", self.side)];
            incan_stdlib::strings::fstring(&__parts, &__args)
        };
    }
}
pub trait Resizable {
    fn resize(&self, factor: f64);
}
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct Carton {
    width: f64,
    height: f64,
    depth: f64,
}
impl incan_stdlib::reflection::HasClassName for Carton {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_stdlib::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_stdlib::reflection::HasTypeClassName for Carton {
    fn __class_name__() -> &'static str {
        "Carton"
    }
}
impl incan_stdlib::reflection::HasFieldMetadata for Carton {
    fn __fields__(
        &self,
    ) -> incan_stdlib::frozen::FrozenList<incan_stdlib::reflection::FieldInfo> {
        <Self as incan_stdlib::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_stdlib::reflection::HasTypeFieldMetadata for Carton {
    fn __fields__() -> incan_stdlib::frozen::FrozenList<
        incan_stdlib::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_stdlib::reflection::FieldInfo; 0] = [];
        incan_stdlib::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl incan_stdlib::reflection::HasFieldValueReflection for Carton {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![]
    }
}
impl Carton {
    pub fn resize(&self, factor: f64) {
        self.width = self.width * factor;
        self.height = self.height * factor;
        self.depth = self.depth * factor;
    }
    pub fn volume(&self) -> f64 {
        return self.width * self.height * self.depth;
    }
}
impl Resizable for Carton {
    fn resize(&self, factor: f64) {
        self.width = self.width * factor;
        self.height = self.height * factor;
        self.depth = self.depth * factor;
    }
}
pub trait Printable {
    fn to_string(&self) -> String;
}
pub trait Serializable {
    fn serialize(&self) -> String;
}
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct Document {
    title: String,
    content: String,
}
impl incan_stdlib::reflection::HasClassName for Document {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_stdlib::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_stdlib::reflection::HasTypeClassName for Document {
    fn __class_name__() -> &'static str {
        "Document"
    }
}
impl incan_stdlib::reflection::HasFieldMetadata for Document {
    fn __fields__(
        &self,
    ) -> incan_stdlib::frozen::FrozenList<incan_stdlib::reflection::FieldInfo> {
        <Self as incan_stdlib::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_stdlib::reflection::HasTypeFieldMetadata for Document {
    fn __fields__() -> incan_stdlib::frozen::FrozenList<
        incan_stdlib::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_stdlib::reflection::FieldInfo; 0] = [];
        incan_stdlib::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl incan_stdlib::reflection::HasFieldValueReflection for Document {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![]
    }
}
impl Document {
    pub fn to_string(&self) -> String {
        return {
            let __parts: [&str; 3usize] = ["", ": ", ""];
            let __args: Vec<String> = vec![
                format!("{}", self.title), format!("{}", self.content)
            ];
            incan_stdlib::strings::fstring(&__parts, &__args)
        };
    }
    pub fn serialize(&self) -> String {
        return {
            let __parts: [&str; 3usize] = ["title=", ",content=", ""];
            let __args: Vec<String> = vec![
                format!("{}", self.title), format!("{}", self.content)
            ];
            incan_stdlib::strings::fstring(&__parts, &__args)
        };
    }
}
impl Printable for Document {
    fn to_string(&self) -> String {
        return {
            let __parts: [&str; 3usize] = ["", ": ", ""];
            let __args: Vec<String> = vec![
                format!("{}", self.title), format!("{}", self.content)
            ];
            incan_stdlib::strings::fstring(&__parts, &__args)
        };
    }
}
impl Serializable for Document {
    fn serialize(&self) -> String {
        return {
            let __parts: [&str; 3usize] = ["title=", ",content=", ""];
            let __args: Vec<String> = vec![
                format!("{}", self.title), format!("{}", self.content)
            ];
            incan_stdlib::strings::fstring(&__parts, &__args)
        };
    }
}
fn draw_shape<__IncanTrait0: Drawable>(shape: __IncanTrait0) {
    let output: String = shape.draw();
    let _ = println!("{}", output);
}
fn calculate_area<__IncanTrait0: Shape>(shape: __IncanTrait0) -> f64 {
    return shape.area();
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let dog: Dog = Dog { name: "Buddy".to_string() };
    let _ = println!(
        "{}", { let __parts : [& str; 2usize] = ["Dog name: ", ""]; let __args : Vec <
        String > = vec![format!("{}", dog.name)]; incan_stdlib::strings::fstring(&
        __parts, & __args) }
    );
    let rect: Rectangle = Rectangle {
        width: 5.0,
        height: 3.0,
    };
    let rect_area: f64 = rect.area();
    let rect_perimeter: f64 = rect.perimeter();
    let _ = println!(
        "{}", { let __parts : [& str; 3usize] = ["Rectangle area: ", ", perimeter: ",
        ""]; let __args : Vec < String > = vec![format!("{}", rect_area), format!("{}",
        rect_perimeter)]; incan_stdlib::strings::fstring(& __parts, & __args) }
    );
    let circle: Circle = Circle { radius: 2.5 };
    let circle_drawing: String = circle.draw();
    let _ = println!("{}", circle_drawing);
    let square: Square = Square { side: 4.0 };
    let square_area: f64 = square.area();
    let square_drawing: String = square.draw();
    let _ = println!(
        "{}", { let __parts : [& str; 2usize] = ["Square area: ", ""]; let __args : Vec <
        String > = vec![format!("{}", square_area)]; incan_stdlib::strings::fstring(&
        __parts, & __args) }
    );
    let _ = println!("{}", square_drawing);
    let mut carton: Carton = Carton {
        width: 2.0,
        height: 3.0,
        depth: 4.0,
    };
    let original_volume: f64 = carton.volume();
    let _ = println!(
        "{}", { let __parts : [& str; 2usize] = ["Original volume: ", ""]; let __args :
        Vec < String > = vec![format!("{}", original_volume)];
        incan_stdlib::strings::fstring(& __parts, & __args) }
    );
    let _ = carton.resize(2.0);
    let new_volume: f64 = carton.volume();
    let _ = println!(
        "{}", { let __parts : [& str; 2usize] = ["New volume: ", ""]; let __args : Vec <
        String > = vec![format!("{}", new_volume)]; incan_stdlib::strings::fstring(&
        __parts, & __args) }
    );
    let doc: Document = Document {
        title: "README".to_string(),
        content: "This is the content".to_string(),
    };
    let doc_str: String = doc.to_string();
    let doc_serial: String = doc.serialize();
    let _ = println!("{}", doc_str);
    let _ = println!("{}", doc_serial);
    let _ = draw_shape(circle);
    let _ = draw_shape(square.clone());
    let area1: f64 = calculate_area(rect);
    let area2: f64 = calculate_area(square);
    let _ = println!(
        "{}", { let __parts : [& str; 3usize] = ["Areas: ", ", ", ""]; let __args : Vec <
        String > = vec![format!("{}", area1), format!("{}", area2)];
        incan_stdlib::strings::fstring(& __parts, & __args) }
    );
}
