tests/snapshots/codegen_snapshot_tests__type_annotations.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
fn test_explicit_types() {
    let _x: i64 = 42;
    let _y: f64 = 3.14;
    let _z: String = "hello".to_string();
    let _flag: bool = true;
}
fn test_collection_types() {
    let _numbers: Vec<i64> = vec![1, 2, 3];
    let _words: Vec<String> = vec!["a".to_string(), "b".to_string(), "c".to_string()];
    let _mapping: std::collections::HashMap<String, i64> = [
        ("a".to_string(), 1),
        ("b".to_string(), 2),
    ]
        .into_iter()
        .collect::<std::collections::HashMap<_, _>>();
}
fn test_option_types() {
    let _maybe_num: Option<i64> = Some(42);
    let _nothing: Option<i64> = None::<i64>;
}
fn test_nested_collections() {
    let _matrix: Vec<Vec<i64>> = vec![vec![1, 2], vec![3, 4]];
    let _dict_of_lists: std::collections::HashMap<String, Vec<i64>> = [
        ("nums".to_string(), vec![1, 2, 3]),
    ]
        .into_iter()
        .collect::<std::collections::HashMap<_, _>>();
}
fn test_function_with_return_type() -> i64 {
    return 42;
}
fn test_function_parameters(x: i64, y: String, z: bool) {
    let _ = println!("{}", x);
    let _ = println!("{}", y);
    let _ = println!("{}", z);
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _ = test_explicit_types();
    let _ = test_collection_types();
    let _ = test_option_types();
    let _ = test_nested_collections();
    let _result: i64 = test_function_with_return_type();
    let _ = test_function_parameters(10, "test".to_string(), true);
}
