tests/snapshots/codegen_snapshot_tests__user_defined_method_decorators.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
#[inline(always)]
pub(crate) fn __incan_init_module_statics() {
    static __INCAN_STATIC_INIT_RUNNING: std::sync::atomic::AtomicBool = std::sync::atomic::AtomicBool::new(
        false,
    );
    if __INCAN_STATIC_INIT_RUNNING.load(std::sync::atomic::Ordering::Acquire) {
        return;
    }
    static __INCAN_STATIC_INIT_ONCE: std::sync::OnceLock<()> = std::sync::OnceLock::new();
    __INCAN_STATIC_INIT_ONCE
        .get_or_init(|| {
            struct __IncanStaticInitGuard<'a>(&'a std::sync::atomic::AtomicBool);
            impl Drop for __IncanStaticInitGuard<'_> {
                fn drop(&mut self) {
                    self.0.store(false, std::sync::atomic::Ordering::Release);
                }
            }
            __INCAN_STATIC_INIT_RUNNING
                .store(true, std::sync::atomic::Ordering::Release);
            let _guard = __IncanStaticInitGuard(&__INCAN_STATIC_INIT_RUNNING);
            std::sync::LazyLock::force(&__INCAN_DECORATED_BOX_LABEL);
        });
}
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct Box {
    value: i64,
}
impl incan_stdlib::reflection::HasClassName for Box {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_stdlib::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_stdlib::reflection::HasTypeClassName for Box {
    fn __class_name__() -> &'static str {
        "Box"
    }
}
impl incan_stdlib::reflection::HasFieldMetadata for Box {
    fn __fields__(
        &self,
    ) -> incan_stdlib::frozen::FrozenList<incan_stdlib::reflection::FieldInfo> {
        <Self as incan_stdlib::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_stdlib::reflection::HasTypeFieldMetadata for Box {
    fn __fields__() -> incan_stdlib::frozen::FrozenList<
        incan_stdlib::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_stdlib::reflection::FieldInfo; 0] = [];
        incan_stdlib::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl incan_stdlib::reflection::HasFieldValueReflection for Box {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![]
    }
}
static __INCAN_DECORATED_BOX_LABEL: std::sync::LazyLock<
    incan_stdlib::storage::StaticCell<fn(&Box, i64) -> i64>,
> = std::sync::LazyLock::new(|| incan_stdlib::storage::StaticCell::new(
    as_int(Box::__incan_original_label_adapter),
));
impl Box {
    fn __incan_original_label(&self, _: i64) -> String {
        __incan_init_module_statics();
        return "value".to_string();
    }
    fn __incan_original_label_adapter(__incan_self: &Box, value: i64) -> String {
        __incan_init_module_statics();
        return __incan_self.__incan_original_label(value);
    }
    pub fn label(&self, __incan_arg_0: i64) -> i64 {
        __incan_init_module_statics();
        return {
            __incan_init_module_statics();
            __INCAN_DECORATED_BOX_LABEL.get()
        }(self, __incan_arg_0);
    }
}
fn parse(_: &Box, value: i64) -> i64 {
    __incan_init_module_statics();
    return value;
}
fn as_int(_: fn(&Box, i64) -> String) -> fn(&Box, i64) -> i64 {
    __incan_init_module_statics();
    return parse;
}
fn run(r#box: Box) -> i64 {
    __incan_init_module_statics();
    return r#box.label(1);
}
fn main() {
    __incan_init_module_statics();
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let r#box = Box { value: 1 };
    let _result = run(r#box);
}
